changed the request methos to a post in order to pass the search query values as body of the request and also fixed the display overflow issues

--- a/src/pages/HomeStyles.css
+++ b/src/pages/HomeStyles.css
@@ -1,72 +1,46 @@
-/* .main-container{
-    border: 2px solid red;
-
-} */
-.main{
+.main {
     display: flex;
-
-}
-.nav-search{
-    /* border: 2px solid red;  */
+  }
+  
+  .nav-search {
     width: 100%;
-}
-.container-for-displaying-leads{
-    border: 1px solid #F6F6F6;
+  }
+  
+  .container-for-displaying-leads {
+    border: 1px solid #f6f6f6;
     border-radius: 5px;
     width: 70vw;
-    /* height: 80vh; */
-    position: relative;
-    top: 20px;
-    left: 70px;
-}
-.column-headers{
-    border: 1px solid #F6F6F6;
-    display: flex;
-    background-color: #F6F6F6;
-    /* justify-content: space-evenly; */
-    margin: 0;
-}
-.column{
-    width: 20vw;
-    padding: 10px 10px;
-}
-.column h5{
-    /* border: 1px solid black; */
-    margin: 0;
-    font-weight: 400;
-}
-.row-content{
-    display: flex;
-}
-.row{
-    width: 50vw;
-    padding: 10px 10px;
-}
-.row h4{
-    /* border: 1px solid black; */
-    margin: 0;
-    font-weight: 400;
-}
-.message-contianer{
-    border: 1px solid red;
-    width: 70vw;
-    /* height: 80vh; */
-    position: relative;
-    top: 50px;
-    left: 70px;
-}
-/* .message{
-    border: 1px solid black;
-    width: 50%;
-    margin: auto;
-}
-.message h3{
-    font-weight: 400;
-    display: flex;
-    justify-content: center;
-}
-.message span{
-    color: red;
-    display: flex;
-    justify-content: center;
-} */
+    margin: 20px auto;
+    overflow-x: auto;
+  }
+  
+  .leads-table {
+    width: 100%;
+    border-collapse: collapse;
+    text-align: left;
+  }
+  
+  .leads-table th,
+  .leads-table td {
+    border: 1px solid #f6f6f6;
+    padding: 10px;
+  }
+  
+  .leads-table th {
+    background-color: #f6f6f6;
+    font-weight: bold;
+  }
+  
+  .leads-table tbody tr:nth-child(even) {
+    background-color: #fafafa;
+  }
+  
+  .leads-table tbody tr:hover {
+    background-color: #f1f1f1;
+  }
+  
+  .leads-table td {
+    word-wrap: break-word;
+    max-width: 20vw;
+  }
+  
